# ata-pipeline1

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  tox.ini
.github/workflows/: on-pull-request.yaml
ata_pipeline1/: fetch_events.py  main.py  process.py  write_prescriptions.py
ata_pipeline1/helpers/: dataclasses.py  datetime.py  enums.py  events.py  fields.py  logging.py  mixins.py  preprocessors.py  re.py  typing.py  url.py
ata_pipeline1/preprocessors/: __init__.py  aggregate.py  base.py  non_aggregate.py
ata_pipeline1/site/: __init__.py  domains.py  names.py  newsletter.py  page.py  sites.py
ata_pipeline1/site/newsletter/: __init__.py  afro_la.py  base.py  dallas_free_press.py  open_vallejo.py  the_19th.py
ata_pipeline1/site/page/: __init__.py  afro_la.py  base.py  dallas_free_press.py  open_vallejo.py  the_19th.py
notebooks/: 1_Fetch.ipynb  2-Preprocess.ipynb  2_Preprocess.ipynb  3_EDA.ipynb  4_Hypothesis_1.ipynb  4_Hypothesis_2.ipynb  4_Hypothesis_5.ipynb  4_Hypothesis_6.ipynb  Appendix_Flyby_Report.ipynb  Appendix_Height_Residuals.ipynb  Appendix_Leading_Distance.ipynb  Appendix_Multiple_Newsletter_Signup.ipynb  Appendix_Ping_Interval.ipynb  Dummy.ipynb  ata_pipeline1
notebooks/helpers/: pathlib.py
tests/: _helpers.py  conftest.py  test_fetch_events.py  test_main.py  test_write_prescriptions.py
tests/helpers/: test_datetime.py
tests/site/newsletter/: conftest.py  test_afro_la.py  test_base.py  test_dallas_free_press.py  test_open_vallejo.py  test_the_19th.py
tests/site/page/: helpers.py  test_afro_la.py  test_dallas_free_press.py  test_open_vallejo.py  test_the_19th.py
