[tool.poetry]
name = "ata-pipeline1"
version = "0.0.1"
description = "ML pipeline for automating the ask."
authors = ["Raaid Arshad <raaid@protonmail.com>"]
repository = "https://github.com/LocalAtBrown/ata-pipeline1"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"


[tool.poetry.dev-dependencies]
mypy = "^0.961"
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
strict = "True"
files = "."
exclude = [
    '\.venv',
]
